--- a/ReShade.vcxproj
+++ b/ReShade.vcxproj
@@ -639,11 +639,13 @@
     <ClCompile Include="source\openxr\openxr_impl_swapchain.cpp" />
     <ClCompile Include="source\platform_utils.cpp" />
     <ClCompile Include="source\runtime.cpp" />
+    <ClCompile Include="source\runtime_dlss_preprocess.cpp" />
     <ClCompile Include="source\runtime_api.cpp" />
     <ClCompile Include="source\runtime_gui.cpp" />
     <ClCompile Include="source\runtime_gui_vr.cpp" />
     <ClCompile Include="source\runtime_manager.cpp" />
     <ClCompile Include="source\runtime_update_check.cpp" />
+    <ClCompile Include="source\nvngx\nvngx_hooks.cpp" />
     <ClCompile Include="source\state_block.cpp" />
     <ClCompile Include="source\vulkan\vulkan_hooks.cpp" />
     <ClCompile Include="source\vulkan\vulkan_hooks_cmd.cpp" />
@@ -758,6 +760,7 @@
     <ClInclude Include="source\platform_utils.hpp" />
     <ClInclude Include="source\reshade_api_object_impl.hpp" />
     <ClInclude Include="source\runtime.hpp" />
+    <ClInclude Include="source\runtime_dlss_preprocess.hpp" />
     <ClInclude Include="source\runtime_internal.hpp" />
     <ClInclude Include="source\runtime_manager.hpp" />
     <ClInclude Include="source\state_block.hpp" />
